--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask==2.2.3
-Flask-SQLAlchemy==2.5.1
-Flask-Login==0.6.2
-Werkzeug==2.2.3
-Pillow==9.3.0
-Flask-Mail==0.9.1
-pandas==1.5.3
-gunicorn==3.0.9
+Flask
+Flask-SQLAlchemy
+Flask-Login
+Werkzeug
+Pillow
+Flask-Mail
+pandas
+gunicorn
